# adm-utils

./: .gitignore  CMakeLists.txt
libs/: README.md
src/: Platform.hpp  Precompiled.hpp
src/Containers/: Chain.hpp  Dictionary.cpp  Dictionary.hpp  InstanceChain.hpp  NTree.hpp  Singleton.hpp
src/Maths/: AABB.hpp  Lerp.hpp  Mat4.cpp  Mat4.hpp  Mat4.inl  Plane.cpp  Plane.hpp  Polygon.cpp  Polygon.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp
src/System/: Library.cpp  Library.hpp
src/Text/: Format.hpp  JSON.hpp  Lexer.cpp  Lexer.hpp
src/Time/: DateTime.cpp  DateTime.hpp  Timer.cpp  Timer.hpp
